# ai-fort

./: .gitignore  .gitmodules  CLAUDE.md
unreal-codex-agent/: .gitignore  .gitignore_app  .mcp.json  DEVELOPMENT.md  README.md  UNIFIED_APP_README.md  debug_import.py  package-lock.json  package.json  pyproject.toml  requirements.txt  setup.bat  setup.sh  test_chat_handler.py  verify_setup.py
unreal-codex-agent/apps/: __init__.py
unreal-codex-agent/config/: asset_pipeline.json  capture_profiles.json  category_baselines.json  placement_profiles.json  project.json  room_taxonomy.json  tag_dictionary.json  validator_rules.json
unreal-codex-agent/data/: ai_usage.json  attachment_analysis_cache.json  knowledge_store.json
unreal-codex-agent/docs/: architecture.md  asset_ai.md  capture_logic.md  codex_loop.md  data_flow.md  mcp_tools.md  modular_placement_plugins.md  pcg_geometry_script_integration.md  plugins_recommendations.md  prefabricator_placement_integration.md  runreal_unreal_mcp.md  uefn_mcp_server_integration.md  uefn_supported_workflows.md  uefn_toolbelt_integration.md  validation.md
unreal-codex-agent/examples/: sample_capture_profiles.json  sample_project.json  sample_room_taxonomy.json  sample_tag_dictionary.json
unreal-codex-agent/scripts/: check_uefn_setup.py  check_unreal_mcp.py  clean_session.ps1  generate_preview_placeholders.py  generate_uefn_workspace.py  generate_unreal_mcp_config.py  install_prefabricator_ue5.ps1  install_prefabricator_ue5.sh  run_index_once.ps1  run_validation_pass.ps1  smoke_check.py  start_agent.ps1  start_agent.sh  start_desktop.mjs
unreal-codex-agent/tests/: test_capture_packet.py  test_chat_sessions.py  test_completion_gate.py  test_placement_engine.py  test_shortlist.py  test_trust_score.py  (+1 more)
(+303 files in other folders)
