[build-system]
requires = ["setuptools>=69.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "unreal-codex-agent"
version = "0.1.0"
description = "Local-first UEFN co-editor scaffold using Codex, Verse/device exports, Asset AI, capture packets, and validation."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
  { name = "Your Name" }
]
keywords = [
  "uefn",
  "verse",
  "fortnite",
  "codex",
  "automation",
  "asset-indexing",
  "computer-vision"
]
dependencies = [
  "pydantic>=2.7,<3.0",
  "pydantic-settings>=2.2,<3.0",
  "python-dotenv>=1.0,<2.0",
  "sqlalchemy>=2.0,<3.0",
  "typer>=0.12,<1.0",
  "rich>=13.7,<14.0",
  "Pillow>=10.3,<11.0",
  "orjson>=3.10,<4.0",
  "loguru>=0.7,<1.0",
  "httpx>=0.27,<1.0",
  "tenacity>=8.2,<9.0",
  "mcp>=1.0,<2.0"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2,<9.0",
  "pytest-cov>=5.0,<6.0",
  "ruff>=0.5,<1.0",
  "black>=24.4,<25.0",
  "mypy>=1.10,<2.0",
  "types-Pillow>=10.2.0.20240822"
]

[project.scripts]
uca = "apps.orchestrator.main:app"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["apps*", "unreal*"]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = [
  "E",
  "F",
  "I",
  "B",
  "UP",
  "N"
]
ignore = [
  "B008"
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
addopts = "-q"

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
warn_unused_configs = true
warn_return_any = false
disallow_untyped_defs = false
